force-app/main/default/objects/User/fields/Slack_Connected_Email__c.field-meta.xml
<CustomField>
    <fullName>Slack_Connected_Email__c</fullName>
    <description>Verified Slack account email for automated drift detection and self-healing</description>
    <label>Slack Connected Email</label>
    <type>Email</type>
</CustomField>