force-app/main/default/objects/User/fields/Slack_DM_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_DM_Channel_Id__c</fullName>
    <description>Persistent 1-on-1 private Direct Message channel ID with the Slack Bot (e.g. D0BUQS5V68Z)</description>
    <label>Slack DM Channel ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>