force-app/main/default/objects/User/fields/Slack_Pairing_Code__c.field-meta.xml
<CustomField>
    <fullName>Slack_Pairing_Code__c</fullName>
    <description>Temporary pairing code for fallback pairing (e.g. Apple ID / private relay)</description>
    <label>Slack Pairing Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>