force-app/main/default/objects/User/fields/Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_Id__c</fullName>
    <description>Persistent unique Slack User ID (e.g. U0C036Y8XC0)</description>
    <label>Slack User ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>